<resources>
    <string name="app_name">IMPULSE</string>
    <string name="app_description">Our app IMPULSE can help you with maintaining your body properly. It has a lot of interesting plans, which can make you feel like never before.</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!--Welcome activity-->
    <string name="lets_get_it_started">Let\'s get it started!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>

    <!-- Navigation menu -->
    <string name="current_program">Current program:</string>
    <string name="progress">Progress</string>
    <string name="plans">Plans</string>
    <string name="my_plans">My plans</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="permission_grant_msg">Grant this permissions to add photos of your product</string>


    <!-- Start fragment -->
    <string name="greeting_text">Hello! Input some data about yourself!</string>
    <string name="input_name">Name</string>
    <string name="input_height">Height</string>
    <string name="input_weight">Weight</string>
    <string name="input_date_of_birth">Date of birth</string>
    <string name="button_done">Done</string>

    <!-- Select image alert dialog -->
    <string name="select_image_title">Choose product picture</string>
    <string name="take_photo_option">Take photo</string>
    <string name="gallery_option">Choose from gallery</string>

    <!--Specific plan -->
    <string name="plan_overview">Plan overview</string>
    <string name="description">Description</string>
    <string name="extended_button_text">Start Plan</string>

    <!-- Progress fragment -->
    <string name="days">Days</string>
    <string name="day">Day</string>

    <!-- Specific day fragment -->
    <string name="exercise_image_content_description">Exercise image</string>
    <string name="start_day">Start Day</string>

    <!-- Profile fragment -->
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="achievements">Achievements</string>


    <!--Exercise timer activity -->
    <string name="how_to_text">How to</string>
    <string name="minutes">minutes</string>
    <string name="reps">reps</string>
    <string name="start_exercise">Start exercise</string>
    <string name="end_exercise">End exercise</string>
    <string name="next_exercise">Next exercise</string>
    <string name="exercise_number">Exercise number1 of number2</string>


    <!--End day activity -->
    <string name="congratulations">Congratulations!</string>
    <string name="you_made_it">You made it!</string>
    <string name="go_to_progress">Go to progress</string>

    <!--Statistics fragment -->
    <string name="total">Total</string>
    <string name="trainings">TRAININGS</string>
    <string name="kcal">KCAL</string>
    <string name="time">TIME</string>
    <string name="history">History</string>
    <string name="records">Records</string>
    <string name="weight">Weight</string>
    <string name="update_weight">Update weight</string>
    <string name="kg">kg</string>
    <string name="Monday_short">Mo</string>
    <string name="Tuedsay_short">Tu</string>
    <string name="Wednesday_short">We</string>
    <string name="Thursday_short">Th</string>
    <string name="Friday_short">Fr</string>
    <string name="Satuday_short">Sa</string>
    <string name="Sunday_short">Su</string>

    <!--New weight dialog -->
    <string name="input_new_weight">Input new weight</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
