<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="167dp"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="24dp"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <ImageView
        android:id="@+id/nav_user_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/ic_launcher_round"

        />

    <TextView
        android:id="@+id/nav_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="@font/robotomedium"/>
    <TextView
        android:id="@+id/nav_current_program"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_program"
        android:textSize="14sp"
        android:textColor="@color/sixty_perc_black"
        android:fontFamily="@font/robotoregular"/>


    <TextView
        android:id="@+id/nav_active_training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
